--- a/chart/templates/service.yaml
+++ b/chart/templates/service.yaml
@@ -2,6 +2,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: {{ include "chart.fullname" . }}
+  namespace: kube-system
   labels:
     {{- include "chart.labels" . | nindent 4 }}
 spec:
