gha: image + helm repo

--- a/chart/templates/deployment.yaml
+++ b/chart/templates/deployment.yaml
@@ -35,7 +35,7 @@ spec:
             - servicelb-standalone
           securityContext:
             {{- toYaml .Values.securityContext | nindent 12 }}
-          image: "{{ .Values.image.repository }}:{{ .Values.image.tag | default .Chart.AppVersion }}"
+          image: "{{ .Values.image.repository }}:{{ .Values.image.tag | default .Chart.Version }}"
           imagePullPolicy: {{ .Values.image.pullPolicy }}
           ports:
             - name: http
