--- a/chart/templates/deployment.yaml
+++ b/chart/templates/deployment.yaml
@@ -6,9 +6,7 @@ metadata:
   labels:
     {{- include "chart.labels" . | nindent 4 }}
 spec:
-  {{- if not .Values.autoscaling.enabled }}
-  replicas: {{ .Values.replicaCount }}
-  {{- end }}
+  replicas: 1
   selector:
     matchLabels:
       {{- include "chart.selectorLabels" . | nindent 6 }}
