--- a/chart/templates/serviceaccount.yaml
+++ b/chart/templates/serviceaccount.yaml
@@ -68,7 +68,7 @@ rules:
     verbs: [get, list, watch]
   - apiGroups: [""]
     resources: [serviceaccounts]
-    verbs: [get, list, watch]
+    verbs: [get, list, watch, create, delete, update]
   - apiGroups: [""]
     resources: [services]
     verbs: [get, list, watch]
